history and assistand functionality add and remove

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <!-- History Section -->
         <div
           id="history-section"
-          class="bg-gradient-to-br hidden from-blue-50 to-purple-50 p-4 rounded-lg shadow-md border border-blue-200"
+          class="hidden bg-gradient-to-br from-blue-50 to-purple-50 p-4 rounded-lg shadow-md border border-blue-200"
         >
           <h3
             class="text-lg font-semibold mb-4 text-center text-transparent bg-clip-text bg-gradient-to-r from-blue-600 to-purple-600"
@@ -196,6 +196,6 @@
         </div>
       </div>
     </div>
-    <script src="./js/index.js"></script>
+    <script src="./JavaScript/index.js"></script>
   </body>
 </html>
